🚧 Start saving of group matches